--- a/angular.json
+++ b/angular.json
@@ -19,17 +19,17 @@
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
             "outputPath": "dist/love-buns-co",
-            "index": "client/index.html",
-            "main": "client/main.ts",
-            "polyfills": "client/polyfills.ts",
+            "index": "client/src/index.html",
+            "main": "client/src/main.ts",
+            "polyfills": "client/src/polyfills.ts",
             "tsConfig": "tsconfig.app.json",
             "assets": [
-              "client/favicon.ico",
-              "client/assets"
+              "client/src/favicon.ico",
+              "client/src/assets"
             ],
             "styles": [
-              "client/custom-theme.scss",
-              "client/styles.scss"
+              "client/src/custom-theme.scss",
+              "client/src/styles.scss"
             ],
             "scripts": []
           },
@@ -38,8 +38,8 @@
               "budgets": [
                 {
                   "type": "initial",
-                  "maximumWarning": "500kb",
-                  "maximumError": "1mb"
+                  "maximumWarning": "1.5mb",
+                  "maximumError": "2mb"
                 },
                 {
                   "type": "anyComponentStyle",
@@ -49,8 +49,8 @@
               ],
               "fileReplacements": [
                 {
-                  "replace": "angular/environments/environment.ts",
-                  "with": "angular/environments/environment.prod.ts"
+                  "replace": "client/src/environments/environment.ts",
+                  "with": "client/src/environments/environment.prod.ts"
                 }
               ],
               "outputHashing": "all"
@@ -87,16 +87,16 @@
         "test": {
           "builder": "@angular-devkit/build-angular:karma",
           "options": {
-            "main": "client/test.ts",
-            "polyfills": "client/polyfills.ts",
+            "main": "client/src/test.ts",
+            "polyfills": "client/src/polyfills.ts",
             "tsConfig": "tsconfig.spec.json",
             "karmaConfig": "karma.conf.js",
             "assets": [
-              "client/favicon.ico",
-              "client/assets"
+              "client/src/favicon.ico",
+              "client/src/assets"
             ],
             "styles": [
-              "client/styles.scss"
+              "client/src/styles.scss"
             ],
             "scripts": []
           }
